# backend9

./: .replit  README.md  config.py  curl.md  curl.txt  database.py  improvements.md  main.py  public.pem  pyproject.toml  replit.nix  requirements.txt
api/controllers/: admin_controller.py  assignment_controller.py  image_controller.py  list_controller.py  manager_controller.py  module_controller.py  playback_controller.py  script_converter_controller.py  simulation_controller.py  tag_controller.py  training_controller.py  training_plan_controller.py  user_controller.py  voice_controller.py
api/schemas/: requests.py  responses.py
domain/interfaces/: manager_repository.py  playback_repository.py  training_repository.py
domain/models/: attempts.py  playback.py  training.py
domain/plugins/: deepgram_plugin.py
domain/services/: advanced_scoring_service.py  assignment_service.py  azure_ai_llm_service.py  chat_service.py  list_service.py  manager_service.py  module_service.py  playback_service.py  scoring_service.py  script_converter_service.py  simulation_service.py  tag_service.py  training_plan_service.py  training_service.py  user_service.py  voice_service.py
domain/utils/: constants.py  date_utils.py
infrastructure/: database.py
infrastructure/repositories/: manager_repository.py  playback_repository.py  training_repository.py
middleware/: auth_middleware.py
models/: playback_data.py  training_data.py
routers/: playback_data.py  trainee_dashboard.py
services/: playback_data_service.py  training_data_service.py
utils/: jwt_validator.py  logger.py
(+10 files in other folders)
