[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.12.14",
    "django-routers>=0.2",
    "fastapi>=0.115.6",
    "motor>=3.6.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
